--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ h1 {
 }
 
 .header {
+  position: fixed;
+  width: 100%;
   border-bottom: 8px double black;
   background-image: url("img/tom-hermans-9BoqXzEeQqM-unsplash.jpg");
   background-size: contain;
@@ -27,8 +29,6 @@ h1 {
   padding: 10px;
   padding-right: 10px;
   background-color: white;
-  position: absolute;
-  right: 0;
   border-bottom-left-radius: 5px;
   border: 2px solid black;
   border-top: 0;
@@ -63,6 +63,9 @@ h2 {
 }
 
 .books {
+  position: absolute;
+  top: 88px;
+  z-index: -1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -78,12 +81,21 @@ h2 {
   color: #af2626;
 }
 
+.books,
+.bookForm,
+.addBook {
+  top: 88px;
+}
+
+.bookForm,
+.addBook {
+  position: fixed;
+  right: 0px;
+}
+
 .bookForm {
   display: none;
   background-color: black;
-  position: absolute;
-  right: 0px;
-  top: 88px;
   z-index: 999;
   width: 400px;
   padding: 20px;
